--- a/index.html
+++ b/index.html
@@ -20914,85 +20914,89 @@ async function saveForumSettingsAndRefresh() {
 
 // --- 步骤二：替换 refreshForumTimeline 函数 ---
 
+// --- 这是修正后的版本，请用它完整替换旧函数 ---
 async function refreshForumTimeline() {
     const refreshBtn = document.getElementById('refreshForumBtn');
-    // 如果正在加载，则阻止重复点击
+    const container = document.getElementById('forumHomeView'); // 【修正1】将这行代码提到函数开头
+
+    // 如果正在加载，则阻止重复点击 (这部分不变)
     if (refreshBtn && refreshBtn.classList.contains('loading')) return;
-    
-    const settings = await dbManager.get('apiSettings', 'settings');
-    if (!settings || !settings.apiUrl || !settings.apiKey || !settings.modelName) {
-        container.innerHTML = '<div style="text-align: center; padding: 50px; color: #999;">请先在论坛设置中配置API</div>';
-        return;
-    }
 
-    const worldview = worldviews.find(w => w.id === forumSettings.worldviewId);
-    if (!worldview) {
-        container.innerHTML = '<div style="text-align: center; padding: 50px; color: #999;">请先在论坛设置中选择一个世界观</div>';
-        return;
-    }
+    // 【修正2】将加载动画的启动和停止逻辑，包裹住整个函数的核心部分
+    try {
+        // --- 核心修改：立刻启动加载动画！---
+        if (refreshBtn) {
+            refreshBtn.classList.add('loading');
+            refreshBtn.disabled = true;
+        }
 
-    const aiParticipants = friends.filter(f => forumSettings.activeAiIds.includes(f.id));
-    const aiInfoForPrompt = aiParticipants.map(ai => {
-        const recentChat = (chatHistories[ai.id] || []).slice(-5).map(m => `${m.type === 'sent' ? '你' : ai.name}: ${m.content}`).join('\n');
-        return `
+        const settings = await dbManager.get('apiSettings', 'settings');
+        if (!settings || !settings.apiUrl || !settings.apiKey || !settings.modelName) {
+            // 现在即使这里出错，也会被下面的 catch 捕获，并且 finally 会停止动画
+            throw new Error("请先在论坛设置中配置API");
+        }
+
+        const worldview = worldviews.find(w => w.id === forumSettings.worldviewId);
+        if (!worldview) {
+            throw new Error("请先在论坛设置中选择一个世界观");
+        }
+
+        // (后面的所有代码，包括 prompt 的构建和 fetch 请求，都保持不变)
+        const aiParticipants = friends.filter(f => forumSettings.activeAiIds.includes(f.id));
+        const aiInfoForPrompt = aiParticipants.map(ai => {
+            const recentChat = (chatHistories[ai.id] || []).slice(-5).map(m => `${m.type === 'sent' ? '你' : ai.name}: ${m.content}`).join('\n');
+            return `
 - AI角色: ${ai.name}
 - 人设: ${ai.role}
 - 与你的最近聊天摘要:
 ${recentChat || '无'}
 `;
-    }).join('');
+        }).join('');
 
-    // 【【【第一处核心修正：全新的、更简单的AI指令】】】
-    // 这里使用了反引号 ` ` 来创建多行字符串，解决了您可能遇到的语法问题。
-    const prompt = `
-    【任务】: 你是一个论坛内容生成器。请严格根据提供的世界观，生成20条完全不同的、高质量的论坛帖子。
+        const prompt = `
+        【任务】: 你是一个论坛内容生成器。请严格根据提供的世界观，生成20条完全不同的、高质量的论坛帖子。
 
-    【世界观设定 (必须严格遵守)】:
-    - 名称: ${worldview.name}
-    - 描述: ${worldview.description}
+        【世界观设定 (必须严格遵守)】:
+        - 名称: ${worldview.name}
+        - 描述: ${worldview.description}
 
-    【参与发帖的AI角色信息 (他们的帖子必须符合人设和聊天记录)】:
-    ${aiInfoForPrompt || '无特定AI角色参与，请生成路人帖子。'}
+        【参与发帖的AI角色信息 (他们的帖子必须符合人设和聊天记录)】:
+        ${aiInfoForPrompt || '无特定AI角色参与，请生成路人帖子。'}
 
-    【发帖人“路人”昵称生成铁律】:
-    1. 你必须构思一批有“网感”的、生活化的、与具体事件无关的昵称备用。
-    2. 这些昵称应该是通用的，比如：“今天吃什么”、“脆脆鲨爱好者”、“不想上班啊啊啊”、“电子咸鱼”、“晚风轻踩”、“月亮失眠了”。
-    3. 严禁使用和帖子内容相关的名字。
+        【发帖人“路人”昵称生成铁律】:
+        1. 你必须构思一批有“网感”的、生活化的、与具体事件无关的昵称备用。
+        2. 这些昵称应该是通用的，比如：“今天吃什么”、“脆脆鲨爱好者”、“不想上班啊啊啊”、“电子咸鱼”、“晚风轻踩”、“月亮失眠了”。
+        3. 严禁使用和帖子内容相关的名字。
 
-    【帖子生成铁律】:
-    1.  **【主题绝对相关】**: 所有帖子内容必须严格围绕 "${worldview.name}" 这个世界观展开。
-    2.  **【绝对禁止重复】**: 20条帖子的内容、发帖人姓名都必须是独一无二的。
-    3.  **【发帖人多样性】**: 帖子可以由AI角色、随机路人或匿名发布。
-    4.  **【内容多样性】**: 帖子内容应覆盖情感、美食、生活、学习、吐槽等多个方面。
-    5.  **【语言风格】**: 必须使用简体中文，口吻要生活化、网络化。绝对不能使用任何Emoji。
-    6.  **【绝对解耦铁律】**: 帖子的 "authorName" 和 "content" 之间绝对不能有任何主题关联。
+        【帖子生成铁律】:
+        1.  **【主题绝对相关】**: 所有帖子内容必须严格围绕 "${worldview.name}" 这个世界观展开。
+        2.  **【绝对禁止重复】**: 20条帖子的内容、发帖人姓名都必须是独一无二的。
+        3.  **【发帖人多样性】**: 帖子可以由AI角色、随机路人或匿名发布。
+        4.  **【内容多样性】**: 帖子内容应覆盖情感、美食、生活、学习、吐槽等多个方面。
+        5.  **【语言风格】**: 必须使用简体中文，口吻要生活化、网络化。绝对不能使用任何Emoji。
+        6.  **【绝对解耦铁律】**: 帖子的 "authorName" 和 "content" 之间绝对不能有任何主题关联。
 
-    【【【输出格式铁律 (必须严格遵守)】】】
-    你的回复必须是纯文本，并且每一条帖子都必须严格遵循以下格式：
-    1.  先写帖子正文内容（可以包含换行符 \\n）。
-    2.  在正文结束后，紧接着写下分隔符 \`[AUTHOR_SEPARATOR]\`。
-    3.  在分隔符之后，写上发帖人的名字。
-    4.  每条帖子之间用两个换行符隔开。
+        【【【输出格式铁律 (必须严格遵守)】】】
+        你的回复必须是纯文本，并且每一条帖子都必须严格遵循以下格式：
+        1.  先写帖子正文内容（可以包含换行符 \\n）。
+        2.  在正文结束后，紧接着写下分隔符 \`[AUTHOR_SEPARATOR]\`。
+        3.  在分隔符之后，写上发帖人的名字。
+        4.  每条帖子之间用两个换行符隔开。
 
-    【格式示例】:
-求助！图书馆三楼那个靠窗的位置也太抢手了吧！
-有什么方法能占到座吗？[AUTHOR_SEPARATOR]夏天的风
+        【格式示例】:
+        求助！图书馆三楼那个靠窗的位置也太抢手了吧！
+        有什么方法能占到座吗？[AUTHOR_SEPARATOR]夏天的风
 
-有点喜欢隔壁班的那个男生，怎么办啊...[AUTHOR_SEPARATOR]匿名用户
+        有点喜欢隔壁班的那个男生，怎么办啊...[AUTHOR_SEPARATOR]匿名用户
 
-    现在，开始生成20条帖子。`;
+        现在，开始生成20条帖子。`;
 
-    try {
-    if(refreshBtn) {
-            refreshBtn.classList.add('loading');
-            refreshBtn.disabled = true;
-        }
         const response = await fetch(`${settings.apiUrl}/chat/completions`, {
             method: 'POST',
             headers: { 'Authorization': `Bearer ${settings.apiKey}`, 'Content-Type': 'application/json' },
-            body: JSON.stringify({ 
-                model: settings.modelName, 
-                messages: [{ role: 'user', content: prompt }], 
+            body: JSON.stringify({
+                model: settings.modelName,
+                messages: [{ role: 'user', content: prompt }],
                 temperature: 1.0,
             })
         });
@@ -21001,31 +21005,20 @@ ${recentChat || '无'}
         const data = await response.json();
         const responseText = data.choices[0].message.content;
 
-        // 【【【第二处核心修正：全新的、更健壮的解析逻辑】】】
         const posts = responseText
-            // 1. 用两个换行符作为帖子的分隔，得到一个帖子数组
             .split('\n\n')
-            // 2. 遍历每一段帖子文本
             .map(postBlock => {
-                // 3. 找到最后一个作者分隔符的位置
                 const separatorIndex = postBlock.lastIndexOf('[AUTHOR_SEPARATOR]');
-                // 4. 如果找到了分隔符
                 if (separatorIndex !== -1) {
-                    // 5. 分隔符之前的是内容
                     const content = postBlock.substring(0, separatorIndex).trim();
-                    // 6. 分隔符之后的是作者
                     const authorName = postBlock.substring(separatorIndex + '[AUTHOR_SEPARATOR]'.length).trim();
-                    // 7. 返回一个结构化的帖子对象
                     if (content && authorName) {
                         return { authorName, content };
                     }
                 }
-                // 8. 如果格式不对，返回 null
                 return null;
             })
-            // 9. 过滤掉所有格式不对的帖子
             .filter(Boolean);
-
 
         const now = new Date();
         currentForumPosts = posts.map((p, i) => {
@@ -21042,7 +21035,6 @@ ${recentChat || '无'}
             };
 
             if (!newPost.authorId && newPost.authorName !== '匿名用户') {
-                // 直接从头像库中随机选择一个URL并保存
                 const randomUrl = passerbyAvatarUrls[Math.floor(Math.random() * passerbyAvatarUrls.length)];
                 newPost.authorAvatarUrl = randomUrl;
             }
@@ -21054,19 +21046,17 @@ ${recentChat || '无'}
         renderForumTimeline();
         showToast('论坛已刷新！');
 
-} catch (error) {
-    console.error("生成论坛帖子失败:", error);
-    // 【修改1】当出错时，不再清空主页，而是弹窗提示，保留旧内容
-    showAlert(`刷新失败: ${error.message}`); 
-    
-} finally {
-    // 【修改2】在这里新增 finally 块
-    // 无论成功或失败，最后都在这里停止按钮动画
-    if(refreshBtn) {
-        refreshBtn.classList.remove('loading');
-        refreshBtn.disabled = false;
+    } catch (error) {
+        // 如果 try 块中的任何地方出错，就在这里弹窗提示
+        console.error("生成论坛帖子失败:", error);
+        showAlert(`刷新失败: ${error.message}`);
+    } finally {
+        // 无论成功还是失败，最后都在这里停止按钮动画
+        if (refreshBtn) {
+            refreshBtn.classList.remove('loading');
+            refreshBtn.disabled = false;
+        }
     }
-}
 }
 
 /**
