--- a/index.html
+++ b/index.html
@@ -1,97 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>蓝牙情趣用品控制器</title>
+    <title>蓝牙控制器 (实验版)</title>
     <style>
-        /* CSS样式部分 */
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 2rem;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-        }
-        .container {
-            width: 95%;
-            max-width: 450px;
-            text-align: center;
-        }
-        button, #connectButton {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 15px 30px;
-            border-radius: 8px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 1rem;
-        }
-        button:hover, #connectButton:hover {
-            background-color: #0056b3;
-        }
-        #controls {
-            display: none;
-            margin-top: 2rem;
-            padding: 2rem;
-            background-color: white;
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            width: 100%;
-            box-sizing: border-box;
-        }
-        .control-group {
-            margin-bottom: 1.5rem;
-        }
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-            text-align: left;
-        }
-        input[type="range"] {
-            width: 100%;
-        }
-        #modeButtons {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-        }
-        #modeButtons button {
-            width: 100%;
-            padding: 12px;
-            margin: 0;
-            background-color: #6c757d;
-        }
-        #modeButtons button.stop-button {
-            background-color: #dc3545;
-            grid-column: 1 / -1; /* 让停止按钮占满整行 */
-        }
-        #log {
-            margin-top: 1.5rem;
-            font-size: 14px;
-            color: #666;
-            background-color: #eee;
-            padding: 10px;
-            border-radius: 5px;
-            min-height: 20px;
-            text-align: left;
-        }
+        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 2rem; background-color: #f4f4f9; color: #333; margin: 0; }
+        .container { width: 95%; max-width: 450px; text-align: center; }
+        button, #connectButton { background-color: #007bff; color: white; border: none; padding: 15px 30px; border-radius: 8px; font-size: 16px; cursor: pointer; transition: background-color 0.3s; margin-top: 1rem; }
+        button:hover, #connectButton:hover { background-color: #0056b3; }
+        #controls { display: none; margin-top: 2rem; padding: 2rem; background-color: white; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 100%; box-sizing: border-box; }
+        .control-group { margin-bottom: 1.5rem; }
+        label { display: block; margin-bottom: 0.5rem; font-weight: bold; text-align: left; }
+        input[type="range"] { width: 100%; }
+        #modeButtons { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+        #modeButtons button { width: 100%; padding: 12px; margin: 0; background-color: #6c757d; }
+        #modeButtons button.stop-button { background-color: #dc3545; grid-column: 1 / -1; }
+        #log { margin-top: 1.5rem; font-size: 14px; color: #666; background-color: #eee; padding: 10px; border-radius: 5px; min-height: 20px; text-align: left; word-break: break-all; }
     </style>
 </head>
 <body>
-
     <div class="container">
-        <h1>蓝牙控制器</h1>
+        <h1>蓝牙控制器 (实验版)</h1>
         <p id="status">请点击下方按钮连接设备</p>
         <button id="connectButton">连接设备 (QCSW)</button>
-
         <div id="controls">
             <div class="control-group">
                 <label for="intensitySlider">强度: <span id="intensityValue">50</span></label>
@@ -112,14 +44,20 @@
     </div>
 
     <script>
-        // JavaScript逻辑部分
-        // =================================================================================
-        // 根据您的截图信息填写的UUID
-        // 注意: 16位的UUID (如'1000') 在Web Bluetooth API中需要转换为标准的128位格式。
-        // =================================================================================
+        // ============================ 实验区 START ============================
+        // 在这里修改参数来进行实验
+
+        // 目标服务和特征 UUID (保持不变，因为连接成功了)
         const SERVICE_UUID = '00001000-0000-1000-8000-00805f9b34fb';
         const CHARACTERISTIC_UUID = '00001001-0000-1000-8000-00805f9b34fb';
-        // =================================================================================
+
+        // 实验一：使用带指令头的指令格式
+        // 猜测：指令 [0x01, 强度值] 用于控制强度
+        //       指令 [0x02, 模式值] 用于控制模式
+        const INTENSITY_PREFIX = 0x01; // 控制强度的指令头
+        const MODE_PREFIX = 0x02;      // 控制模式的指令头
+
+        // ============================ 实验区 END ==============================
 
         const connectButton = document.getElementById('connectButton');
         const controls = document.getElementById('controls');
@@ -132,50 +70,39 @@
         let controlCharacteristic;
         let bluetoothDevice;
 
-        // 打印日志到页面
         function logMessage(message) {
             console.log(message);
             log.textContent = message;
         }
 
-        // 连接蓝牙设备
         connectButton.addEventListener('click', async () => {
             try {
                 logMessage('正在请求蓝牙设备...');
                 statusDisplay.textContent = '请在弹窗中选择名为 "QCSW" 的设备...';
-
                 bluetoothDevice = await navigator.bluetooth.requestDevice({
-                    filters: [{
-                        name: 'QCSW' // 通过设备名称过滤，更方便
-                    }],
-                    optionalServices: [SERVICE_UUID] // 声明需要访问的服务
+                    filters: [{ name: 'QCSW' }],
+                    optionalServices: [SERVICE_UUID]
                 });
 
                 logMessage('设备已选择，正在连接...');
                 statusDisplay.textContent = '正在连接...';
                 const server = await bluetoothDevice.gatt.connect();
-
                 logMessage('正在获取服务...');
                 const service = await server.getPrimaryService(SERVICE_UUID);
-
                 logMessage('正在获取特征...');
                 controlCharacteristic = await service.getCharacteristic(CHARACTERISTIC_UUID);
-
                 logMessage('连接成功！');
                 statusDisplay.textContent = '设备已连接';
                 connectButton.style.display = 'none';
                 controls.style.display = 'block';
-
                 bluetoothDevice.addEventListener('gattserverdisconnected', onDisconnected);
-
             } catch (error) {
                 logMessage(`连接失败: ${error}`);
                 statusDisplay.textContent = `连接失败，请重试。`;
-                alert('连接失败，请确保设备已开启并靠近手机/电脑。错误信息: ' + error);
+                alert('连接失败: ' + error);
             }
         });
 
-        // 断开连接处理
         function onDisconnected() {
             logMessage('设备已断开连接');
             statusDisplay.textContent = '设备已断开，请重新连接';
@@ -184,18 +111,16 @@
             controls.style.display = 'none';
         }
 
-        // 发送指令的函数
-        async function sendCommand(value) {
+        // 新的发送指令函数，可以发送多个字节
+        async function sendCommand(commandArray) {
             if (!controlCharacteristic) {
                 logMessage('特征不可用');
                 return;
             }
             try {
-                // 蓝牙通信通常使用字节数组。Uint8Array.of()可以创建一个包含单个字节的数组。
-                const command = Uint8Array.of(value);
-                // 使用 WriteWithoutResponse 更快，因为它不需要设备确认
+                const command = Uint8Array.from(commandArray);
                 await controlCharacteristic.writeValueWithoutResponse(command);
-                logMessage(`指令已发送: [${command}]`);
+                logMessage(`指令已发送: [${command.join(', ')}]`);
             } catch (error) {
                 logMessage(`发送失败: ${error}`);
             }
@@ -205,19 +130,23 @@
         intensitySlider.addEventListener('input', () => {
             const value = parseInt(intensitySlider.value);
             intensityValue.textContent = value;
-            // 实时发送强度值
-            sendCommand(value);
+            // 发送带指令头的指令，例如 [1, 50]
+            sendCommand([INTENSITY_PREFIX, value]);
         });
 
         // 控制模式
         modeButtons.addEventListener('click', (event) => {
-            // 确保点击的是按钮
             if (event.target.tagName === 'BUTTON') {
                 const mode = parseInt(event.target.dataset.mode);
-                sendCommand(mode);
+                if (mode === 0) {
+                    // 停止指令可能比较特殊，我们先尝试发送 [指令头, 0]
+                    sendCommand([INTENSITY_PREFIX, 0]);
+                } else {
+                    // 发送模式指令，例如 [2, 3]
+                    sendCommand([MODE_PREFIX, mode]);
+                }
             }
         });
-
     </script>
 </body>
 </html>
