--- a/index.html
+++ b/index.html
@@ -3,63 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kisstoy 控制器</title>
+    <title>蓝牙握手测试器</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 2rem; background-color: #f4f4f9; color: #333; margin: 0; }
         .container { width: 95%; max-width: 450px; text-align: center; }
-        button, #connectButton { background-color: #e60073; color: white; border: none; padding: 15px 30px; border-radius: 8px; font-size: 16px; cursor: pointer; transition: background-color 0.3s; margin-top: 1rem; }
-        button:hover, #connectButton:hover { background-color: #c20062; }
-        #controls { display: none; margin-top: 2rem; padding: 2rem; background-color: white; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); width: 100%; box-sizing: border-box; }
-        .control-group { margin-bottom: 1.5rem; }
-        label { display: block; margin-bottom: 0.5rem; font-weight: bold; text-align: left; }
-        input[type="range"] { width: 100%; -webkit-appearance: none; appearance: none; height: 8px; background: #ddd; border-radius: 5px; outline: none; }
-        input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 24px; height: 24px; background: #e60073; cursor: pointer; border-radius: 50%; }
-        input[type="range"]::-moz-range-thumb { width: 24px; height: 24px; background: #e60073; cursor: pointer; border-radius: 50%; }
-        #modeButtons { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-        #modeButtons button { width: 100%; padding: 12px; margin: 0; background-color: #6c757d; }
-        #modeButtons button.stop-button { background-color: #dc3545; grid-column: 1 / -1; }
+        button { background-color: #007bff; color: white; border: none; padding: 15px 20px; border-radius: 8px; font-size: 16px; cursor: pointer; transition: background-color 0.3s; margin-top: 1rem; width: 100%; box-sizing: border-box; }
+        button:hover { background-color: #0056b3; }
+        #controls { display: none; margin-top: 1.5rem; }
         #log { margin-top: 1.5rem; font-size: 14px; color: #666; background-color: #eee; padding: 10px; border-radius: 5px; min-height: 20px; text-align: left; word-break: break-all; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Kisstoy 控制器</h1>
-        <p id="status">请点击下方按钮连接设备</p>
+        <h1>握手指令测试器</h1>
+        <p id="status">第1步: 点击下方按钮连接设备</p>
         <button id="connectButton">连接设备 (QCSW)</button>
+
         <div id="controls">
-            <div class="control-group">
-                <label for="intensitySlider">强度: <span id="intensityValue">0</span></label>
-                <input type="range" id="intensitySlider" min="0" max="100" value="0">
-            </div>
-            <div class="control-group">
-                <label>模式</label>
-                <div id="modeButtons">
-                    <button data-mode="1">模式 1</button>
-                    <button data-mode="2">模式 2</button>
-                    <button data-mode="3">模式 3</button>
-                    <button data-mode="4">模式 4</button>
-                    <button data-mode="0" class="stop-button">停止</button>
-                </div>
-            </div>
-            <div id="log">等待操作...</div>
+            <p>第2步: 按顺序点击下方按钮，并仔细观察玩具是否有**任何**反应（例如：震动一下、灯光变化等）。</p>
+            <button data-command="01">测试指令 1: [0x01]</button>
+            <button data-command="02">测试指令 2: [0x02]</button>
+            <button data-command="f0">测试指令 3: [0xf0]</button>
+            <button data-command="550101aa">测试指令 4: [0x55, 0x01, 0x01, 0xaa]</button>
+            <button data-command="00010001">测试指令 5: [0x00, 0x01, 0x00, 0x01]</button>
         </div>
+        <div id="log">等待操作...</div>
     </div>
 
     <script>
-        // UUIDs (已确认正确)
         const SERVICE_UUID = '00001000-0000-1000-8000-00805f9b34fb';
-        const CHARACTERISTIC_UUID = '00001001-0000-1000-8000-00805f9b34fb';
+        // 我们将向 1001 发送握手指令
+        const CHARACTERISTIC_UUID = '00001001-0000-1000-8000-00805f9b34fb'; 
 
         const connectButton = document.getElementById('connectButton');
         const controls = document.getElementById('controls');
         const statusDisplay = document.getElementById('status');
-        const intensitySlider = document.getElementById('intensitySlider');
-        const intensityValue = document.getElementById('intensityValue');
-        const modeButtons = document.getElementById('modeButtons');
         const log = document.getElementById('log');
 
         let controlCharacteristic;
-        let bluetoothDevice;
 
         function logMessage(message) {
             console.log(message);
@@ -69,74 +50,43 @@
         connectButton.addEventListener('click', async () => {
             try {
                 logMessage('正在请求蓝牙设备...');
-                statusDisplay.textContent = '请在弹窗中选择名为 "QCSW" 的设备...';
-                bluetoothDevice = await navigator.bluetooth.requestDevice({
+                const device = await navigator.bluetooth.requestDevice({
                     filters: [{ name: 'QCSW' }],
                     optionalServices: [SERVICE_UUID]
                 });
-                logMessage('设备已选择，正在连接...');
-                statusDisplay.textContent = '正在连接...';
-                const server = await bluetoothDevice.gatt.connect();
-                logMessage('正在获取服务...');
+                logMessage('正在连接...');
+                const server = await device.gatt.connect();
                 const service = await server.getPrimaryService(SERVICE_UUID);
-                logMessage('正在获取特征...');
                 controlCharacteristic = await service.getCharacteristic(CHARACTERISTIC_UUID);
-                logMessage('连接成功！');
+                logMessage('连接成功！请开始测试握手指令。');
                 statusDisplay.textContent = '设备已连接';
                 connectButton.style.display = 'none';
                 controls.style.display = 'block';
-                bluetoothDevice.addEventListener('gattserverdisconnected', onDisconnected);
             } catch (error) {
                 logMessage(`连接失败: ${error}`);
-                statusDisplay.textContent = `连接失败，请重试。`;
-                alert('连接失败: ' + error);
             }
         });
 
-        function onDisconnected() {
-            logMessage('设备已断开连接');
-            statusDisplay.textContent = '设备已断开，请重新连接';
-            alert('设备已断开连接');
-            connectButton.style.display = 'block';
-            controls.style.display = 'none';
-        }
-
-        async function sendCommand(commandArray) {
-            if (!controlCharacteristic) {
-                logMessage('特征不可用');
-                return;
-            }
-            try {
-                const command = Uint8Array.from(commandArray);
-                await controlCharacteristic.writeValueWithoutResponse(command);
-                // 将指令以十六进制格式显示，更清晰
-                const hexString = Array.from(command).map(b => '0x' + b.toString(16).padStart(2, '0')).join(', ');
-                logMessage(`指令已发送: [${hexString}]`);
-            } catch (error) {
-                logMessage(`发送失败: ${error}`);
-            }
-        }
-
-        // 控制强度 (使用Kisstoy协议)
-        intensitySlider.addEventListener('input', () => {
-            const value = parseInt(intensitySlider.value);
-            intensityValue.textContent = value;
-            // 指令格式: [0x55, 0x04, 0x01, 强度值, 0xAA]
-            sendCommand([0x55, 0x04, 0x01, value, 0xAA]);
-        });
-
-        // 控制模式 (使用Kisstoy协议)
-        modeButtons.addEventListener('click', (event) => {
+        controls.addEventListener('click', async (event) => {
             if (event.target.tagName === 'BUTTON') {
-                const mode = parseInt(event.target.dataset.mode);
-                if (mode === 0) {
-                    // 停止指令就是强度为0
-                    sendCommand([0x55, 0x04, 0x01, 0, 0xAA]);
-                    intensitySlider.value = 0;
-                    intensityValue.textContent = 0;
-                } else {
-                    // 模式指令格式: [0x55, 0x02, 模式号, 0x01, 0xAA]
-                    sendCommand([0x55, 0x02, mode, 0x01, 0xAA]);
+                const commandHex = event.target.dataset.command;
+                // 将十六进制字符串转换为字节数组
+                const commandBytes = [];
+                for (let i = 0; i < commandHex.length; i += 2) {
+                    commandBytes.push(parseInt(commandHex.substring(i, i + 2), 16));
+                }
+                
+                if (!controlCharacteristic) {
+                    logMessage('特征不可用');
+                    return;
+                }
+                try {
+                    const command = Uint8Array.from(commandBytes);
+                    await controlCharacteristic.writeValueWithoutResponse(command);
+                    const hexString = Array.from(command).map(b => '0x' + b.toString(16).padStart(2, '0')).join(', ');
+                    logMessage(`指令 [${hexString}] 已发送。请观察设备反应！`);
+                } catch (error) {
+                    logMessage(`发送失败: ${error}`);
                 }
             }
         });
